Add health score gauge to the dataset meta header

--- a/wherehows-web/app/styles/layout/_dataset.scss
+++ b/wherehows-web/app/styles/layout/_dataset.scss
@@ -12,3 +12,22 @@
   text-overflow: ellipsis;
   margin: 0;
 }
+
+.dataset-header-meta {
+  display: flex;
+  position: relative;
+
+  .dataset-health-score {
+    position: absolute;
+    right: item-spacing(5);
+    bottom: 0;
+  }
+
+  .dataset-owner-list {
+    margin-left: item-spacing(4);
+
+    .avatar-container {
+      justify-content: flex-start;
+    }
+  }
+}
