fixes template indentation issues and minor refactors of template HTML usage

--- a/wherehows-web/app/templates/components/avatars/rollup-avatars.hbs
+++ b/wherehows-web/app/templates/components/avatars/rollup-avatars.hbs
@@ -17,7 +17,7 @@
             <h4>{{aviMeta.name}}</h4>
 
             {{#if aviMeta.email}}
-              <a href="mailto:{{aviMeta.email}}" class="avatar-meta-action" target="_blank">
+              <a href="mailto:{{aviMeta.email}}" class="avatar-meta-action" target="_blank" rel="noopener">
                 <strong><i class="fa fa-at"></i></strong> {{aviMeta.email}}
               </a>
             {{/if}}
