--- a/wherehows-web/app/templates/components/avatars/stacked-avatars-list.hbs
+++ b/wherehows-web/app/templates/components/avatars/stacked-avatars-list.hbs
@@ -19,7 +19,7 @@
 
         {{#avatars/avatar-metadata class="avatar-item--stacked__meta" avatar=avatar as |aviMeta|}}
           {{#if aviMeta.email}}
-            <a href="mailto:{{aviMeta.email}}" class="avatar-meta-action" target="_blank">
+            <a href="mailto:{{aviMeta.email}}" class="avatar-meta-action" target="_blank" rel="noopener">
               <strong><i class="fa fa-at"></i></strong> {{aviMeta.email}}
             </a>
           {{/if}}
