--- a/wherehows-web/app/templates/components/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/dataset-compliance.hbs
@@ -8,11 +8,11 @@
         <div class="alert alert-danger post-action-notification" role="alert">
           <p>
             Oops! We have discovered some issues with this Dataset's fields that
-            may put any updates in an invalid state. <br/>
-            Unfortunately updates are <strong>disabled</strong> at this time. <br/>
+            may put any updates in an invalid state. <br>
+            Unfortunately updates are <strong>disabled</strong> at this time. <br>
             Please shoot us an email at
             <a href="mailto:ask_metadata@linkedin.com">ask_metadata@linkedin.com</a>
-            and we will get on this asap! <br/>
+            and we will get on this asap! <br>
             Our apologies.
           </p>
         </div>
@@ -27,13 +27,13 @@
 
                   {{#track-ui-event category=trackableCategory.Compliance action=trackableEvent.Compliance.ManualApply
                                     name=editStep.name as |metrics|}}
-                  <button
-                    class="nacho-button nacho-button--large-inverse action-bar__item"
-                    title="Apply JSON"
-                    onclick={{action metrics.trackOnAction (action "onApplyComplianceJson")}}
-                    disabled={{isManualApplyDisabled}}>
-                    Apply
-                  </button>
+                    <button
+                      class="nacho-button nacho-button--large-inverse action-bar__item"
+                      title="Apply JSON"
+                      onclick={{action metrics.trackOnAction (action "onApplyComplianceJson")}}
+                      disabled={{isManualApplyDisabled}}>
+                      Apply
+                    </button>
                   {{/track-ui-event}}
 
                 {{else}}
@@ -60,7 +60,7 @@
                     title="{{unless isDatasetFullyClassified
                                     'Ensure you have provided a yes/no value for all dataset tags'
                                     'Save'}}"
-                    onclick={{action "saveCompliance"}} disabled={{isSavingDisabled}}>
+                    onclick={{action metrics.trackOnAction (action "saveCompliance")}} disabled={{isSavingDisabled}}>
                     Save
                   </button>
                 {{/track-ui-event}}
@@ -152,7 +152,7 @@
         {{/if}}
 
         {{#if getPlatformPoliciesTask.last.isError}}
-        {{!--todo: swap out with error-state component--}}
+          {{!--todo: swap out with error-state component--}}
           {{empty-state
             heading="Purge Policies not available"
             subHead="Could not find supported purge policies for this platform"
