--- a/wherehows-web/app/templates/components/ember-selector.hbs
+++ b/wherehows-web/app/templates/components/ember-selector.hbs
@@ -1,8 +1,8 @@
 {{!-- TODO: DSS-6122 Add label for select--}}
 <select {{action "change" on="change"}} disabled={{disabled}}>
-  {{#each content as |option|}}
-    <option value="{{option.value}}" selected={{option.isSelected}} disabled={{option.isDisabled}}>
-      {{if option.label option.label option.value}}
+  {{#each content as |opt|}}
+    <option value="{{opt.value}}" selected={{opt.isSelected}} disabled={{opt.isDisabled}}>
+      {{if opt.label opt.label opt.value}}
     </option>
   {{/each}}
 </select>
