--- a/wherehows-web/app/templates/index.hbs
+++ b/wherehows-web/app/templates/index.hbs
@@ -9,7 +9,7 @@
                 <img
                   alt="{{featureCard.alt}}"
                   src="{{featureCard.icon}}"
-                  class="feature-card__image"/>
+                  class="feature-card__image">
 
                 <h3 class="feature-card__title">{{featureCard.title}}</h3>
 
