--- a/wherehows-web/app/templates/navbar.hbs
+++ b/wherehows-web/app/templates/navbar.hbs
@@ -10,9 +10,9 @@
 
       {{#link-to "index" class="navbar-brand"}}
         <div>
-        <img src="{{model.brand.logo}}"
-             alt="WhereHows Logo">
-        <sup class="beta-badge">(Beta)</sup>
+          <img src="{{model.brand.logo}}"
+               alt="WhereHows Logo">
+          <sup class="beta-badge">(Beta)</sup>
         </div>
       {{/link-to}}
     </div>
@@ -51,10 +51,11 @@
             </li>
 
             <li>
-              <!--TODO: DSS-6716-->
-              <!-- DRY out with wrapper component that takes the link as an attribute-->
+              {{! TODO: DSS-6716 }}
+              {{! DRY out with wrapper component that takes the link as an attribute }}
               <a href="https://iwww.corp.linkedin.com/wiki/cf/display/ENGS/Metadata+Coverage"
                  title="Metadata Coverage"
+                 rel="noopener"
                  target="_blank">
                 See Metadata Coverage
               </a>
