--- a/wherehows-web/app/styles/components/upstream-owners/_upstream-owners.scss
+++ b/wherehows-web/app/styles/components/upstream-owners/_upstream-owners.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-top: item-spacing(5);
 
   &__informational {
     display: flex;
