moves services and actions to decorator methods

--- a/wherehows-web/app/templates/components/dataset-author.hbs
+++ b/wherehows-web/app/templates/components/dataset-author.hbs
@@ -46,7 +46,7 @@
 
     <button
       class="nacho-button nacho-button--small remove-dataset-author"
-      {{action "removeOwner"}}>
+      {{action "onRemoveOwner"}}>
       <i class="fa fa-trash"
          aria-label="Remove Owner"></i>
     </button>
