Fixes issues where going from another tab to health tab does not render charts in ds view

--- a/wherehows-web/app/templates/components/datasets/containers/dataset-health.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-health.hbs
@@ -1,5 +1,6 @@
 <h3>Metadata Health</h3>
 {{datasets/health/metrics-charts
+  isActiveTab=isActiveTab
   categoryData=renderedCategories
   severityData=renderedSeverity
   onCategorySelect=(action onFilterSelect "category")
