--- a/wherehows-web/app/templates/datasets/dataset.hbs
+++ b/wherehows-web/app/templates/datasets/dataset.hbs
@@ -172,7 +172,7 @@
 
     {{#if shouldShowDatasetHealth}}
       {{#tabs.tabpanel tabIds.Health}}
-        {{datasets/containers/dataset-health urn=encodedUrn}}
+        {{datasets/containers/dataset-health urn=encodedUrn tabSelected=tabSelected}}
       {{/tabs.tabpanel}}
     {{/if}}
   </div>
