Finalize handling for api for metadata health endpoint and showing results

--- a/wherehows-web/app/templates/datasets/dataset.hbs
+++ b/wherehows-web/app/templates/datasets/dataset.hbs
@@ -62,10 +62,12 @@
               class="dataset-owner-list"
               shouldShowDatasetHealth=shouldShowDatasetHealth}}
 
-            {{visualization/charts/score-gauge
-              class="dataset-health-score"
-              score=83
-              title="Health Score:"}}
+            {{#if shouldShowHealthGauge}}
+              {{visualization/charts/score-gauge
+                class="dataset-health-score"
+                score=datasetHealthScore
+                title="Health Score:"}}
+            {{/if}}
           {{/if}}
         </div>
 
