Fix modify twice on same render error and create new container to handle health gauge data task

--- a/wherehows-web/app/templates/datasets/dataset.hbs
+++ b/wherehows-web/app/templates/datasets/dataset.hbs
@@ -62,12 +62,7 @@
               class="dataset-owner-list"
               shouldShowDatasetHealth=shouldShowDatasetHealth}}
 
-            {{#if shouldShowHealthGauge}}
-              {{visualization/charts/score-gauge
-                class="dataset-health-score"
-                score=datasetHealthScore
-                title="Health Score:"}}
-            {{/if}}
+            {{datasets/containers/health-score-gauge urn=encodedUrn}}
           {{/if}}
         </div>
 
