--- a/wherehows-web/app/templates/components/visualization/charts/score-gauge.hbs
+++ b/wherehows-web/app/templates/components/visualization/charts/score-gauge.hbs
@@ -1,4 +1,4 @@
-{{high-charts chartOptions=chartOptions content=chartData}}
+{{high-charts chartOptions=(readonly chartOptions) content=(readonly chartData)}}
 <div class="score-gauge__legend-wrapper">
   <h6 class="score-gauge__legend-title">
     {{title}}
