Code cleanup for health score gauge handler

--- a/wherehows-web/app/templates/components/datasets/containers/health-score-gauge.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/health-score-gauge.hbs
@@ -1,4 +1,8 @@
-{{visualization/charts/score-gauge
-  class="dataset-health-score"
-  score=healthScore
-  title="Health Score:"}}
+{{#if getHealthScoreTask.isIdle}}
+  {{visualization/charts/score-gauge
+    class="dataset-health-score"
+    score=healthScore
+    title="Health Score:"}}
+{{else}}
+  {{pendulum-ellipsis-animation}}
+{{/if}}
