--- a/wherehows-web/app/templates/application.hbs
+++ b/wherehows-web/app/templates/application.hbs
@@ -1,25 +1,26 @@
 {{notifications/banner-alerts}}
-{{hotkeys/global-hotkeys}}
 
 {{#if session.isAuthenticated}}
-  {{partial "navbar"}}
-  {{!-- banner-alert-offset pushes the app view down to show the banner at the top above the navbar --}}
-  <div class="app-container {{if banners.isShowingBanners "banner-alert-offset"}}">
-    {{#hero-container}}
-      <header class="nacho-hero__header">
-        Search for datasets
-      </header>
-      <section class="nacho-hero__content">
-        {{search-bar-form didSearch=(action "didSearch")}}
+  {{#hotkeys/global-hotkeys}}
+    {{partial "navbar"}}
+    {{!-- banner-alert-offset pushes the app view down to show the banner at the top above the navbar --}}
+    <div class="app-container {{if banners.isShowingBanners "banner-alert-offset"}}">
+      {{#hero-container}}
+        <header class="nacho-hero__header">
+          Search for datasets
+        </header>
+        <section class="nacho-hero__content">
+          {{search-bar-form didSearch=(action "didSearch")}}
+        </section>
+      {{/hero-container}}
+
+      <section class="container-fluid">
+        {{partial "main"}}
       </section>
-    {{/hero-container}}
+    </div>
 
-    <section class="container-fluid">
-      {{partial "main"}}
-    </section>
-  </div>
-
-  {{notifications-service service=notifications}}
+    {{notifications-service service=notifications}}
+  {{/hotkeys/global-hotkeys}}
 {{else}}
   {{outlet "login"}}
 {{/if}}
