converts links to use config object

--- a/wherehows-web/app/templates/components/dataset-aclaccess.hbs
+++ b/wherehows-web/app/templates/components/dataset-aclaccess.hbs
@@ -1,6 +1,6 @@
 <div>
   {{more-info
-    link="http://go/jitaclfaq"
+    link=@aclMoreInfoLink
     tooltip="Click for more information on ACL Access"
   }}
 </div>
