--- a/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
@@ -24,6 +24,7 @@
       datasetName=datasetName
       schemaless=schemaless
       platform=platform
+      wikiLinks=@wikiLinks
       complianceInfo=complianceInfo
       complianceSuggestion=complianceSuggestion
       suggestionConfidenceThreshold=suggestionConfidenceThreshold
