--- a/wherehows-web/app/templates/components/datasets/schemaless-tagging.hbs
+++ b/wherehows-web/app/templates/components/datasets/schemaless-tagging.hbs
@@ -30,7 +30,7 @@
     Dataset security classification
 
     {{more-info
-      link="http://go/dht"
+      link=@classificationHelpLink
       tooltip="information dataset security classification"
     }}
   </h4>
