--- a/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-classification.hbs
+++ b/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-classification.hbs
@@ -7,7 +7,7 @@
 
 
       {{more-info
-        link="http://go/gdpr-taxonomy#MetadataTaxonomyforDataSets-DatasetLevelTags"
+        link=@wikiLinks.gdprTaxonomy
         tooltip="Click for more information on Dataset classification with examples"
       }}
     </p>
