--- a/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-compliance-entities.hbs
+++ b/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-compliance-entities.hbs
@@ -6,7 +6,7 @@
            "IDs and PII in the schema"}}
 
       {{more-info
-        link="http://go/gdpr-pii"
+        link=@wikiLinks.gdprPii
         tooltip="Click for more information on Schema field format and types"
       }}
 
@@ -105,7 +105,7 @@
           Field
 
           {{more-info
-            link="http://go/tms-schema"
+            link=@wikiLinks.tmsSchema
             tooltip="Click for more information on Schema"
           }}
         {{/head.column}}
@@ -337,7 +337,7 @@
                                             </div>
 
                                             {{more-info
-                                              link="http://go/metadata-custom-regex"
+                                              link=@wikiLinks.metadataCustomRegex
                                               tooltip="Click for more information on RegExp format"
                                             }}
 
