--- a/wherehows-web/app/templates/components/datasets/containers/dataset-acl-access.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-acl-access.hbs
@@ -7,6 +7,7 @@
   {{#if isJitAclAccessEnabled}}
     {{dataset-aclaccess
       acls=acls
+      aclMoreInfoLink=@aclMoreInfoLink
       hasValidAclRequest=hasValidAclRequest
       userAclRequest=userAclRequest
       userHasAclAccess=userHasAclAccess
