--- a/wherehows-web/app/templates/datasets/dataset.hbs
+++ b/wherehows-web/app/templates/datasets/dataset.hbs
@@ -149,6 +149,7 @@
       {{datasets/containers/dataset-compliance
         urn=encodedUrn
         platform=model.platform
+        wikiLinks=wikiLinks
         datasetName=model.nativeName
         notifyPiiStatus=(action "onNotifyPiiStatus")
         setOnChangeSetChange=(action "setOnChangeSetChange")
@@ -158,7 +159,11 @@
     {{/tabs.tabpanel}}
 
     {{#tabs.tabpanel tabIds.Access}}
-      {{datasets/containers/dataset-acl-access urn=encodedUrn isJitAclAccessEnabled=isJitAclAccessEnabled}}
+      {{datasets/containers/dataset-acl-access
+        urn=encodedUrn
+        aclMoreInfoLink=wikiLinks.jitAcl
+        isJitAclAccessEnabled=isJitAclAccessEnabled
+      }}
     {{/tabs.tabpanel}}
 
     {{#if shouldShowDatasetLineage}}
