--- a/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-classification.hbs
+++ b/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-classification.hbs
@@ -16,7 +16,7 @@
       <div class="compliance-entities-meta__secondary">
         <button
           class="nacho-button nacho-button--tertiary"
-          onclick={{action "nextStep"}}>
+          onclick={{action toggleEditing true ComplianceEdit.DatasetLevelPolicy}}>
 
           <i class="fa fa-pencil" aria-label="Edit Compliance Policy"></i>
 
