--- a/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-compliance-entities.hbs
+++ b/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-compliance-entities.hbs
@@ -79,7 +79,7 @@
     <div class="compliance-entities-meta__secondary">
       <button
         class="nacho-button nacho-button--tertiary"
-        onclick={{action "nextStep"}}>
+        onclick={{action toggleEditing true ComplianceEdit.CompliancePolicy}}>
 
         <i class="fa fa-pencil" aria-label="Edit Compliance Policy"></i>
 
