updates visual hint for dataset compliance annotations. updates wording for hints

--- a/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-compliance-entities.hbs
+++ b/wherehows-web/app/templates/datasets/dataset-compliance/-dataset-compliance-entities.hbs
@@ -44,11 +44,9 @@
       selectionDidChange=(action "onFieldReviewChange")
     }}
 
-    {{#if fieldReviewHint}}
-      <span class="dataset-compliance-fields__has-suggestions">
-        {{fieldReviewHint}}
-      </span>
-    {{/if}}
+    <span class="dataset-compliance-fields__filter-count">
+      {{pluralize foldedChangeSet.length "field"}}
+    </span>
   {{/if}}
 
   {{#if isEditing}}
@@ -89,6 +87,11 @@
   {{/if}}
 </section>
 
+<div class="dataset-compliance-fields__subtitle">
+  <div class="dataset-compliance-fields__review-hint">
+    {{fieldReviewHint}}
+  </div>
+</div>
 {{#if showGuidedComplianceEditMode}}
   {{#if foldedChangeSet.length}}
     {{#dataset-table
@@ -151,7 +154,7 @@
                 {{#if
                   (and row.suggestion (and (not row.suggestionMatchesCurrentValue) (not row.suggestionResolution)))}}
 
-                  <span class="nacho-tooltip" data-title="Has suggestions">
+                  <span class="nacho-tooltip" data-title="Suggestion conflicts with data type">
                     <i class="fa fa-exclamation dataset-compliance-fields__has-suggestions__icon"
                        title="Compliance field has suggested values"></i>
                   </span>
