--- a/wherehows-web/app/styles/components/dataset-compliance/_compliance-table.scss
+++ b/wherehows-web/app/styles/components/dataset-compliance/_compliance-table.scss
@@ -29,6 +29,23 @@
     }
   }
 
+  &__filter-count {
+    color: $compliance-suggestion-color;
+    margin-left: item-spacing(2);
+  }
+
+  &__subtitle {
+    display: flex;
+    align-items: center;
+    padding: item-spacing(2 0);
+  }
+
+  &__review-hint {
+    color: $compliance-suggestion-color;
+    height: item-spacing(5);
+    padding-left: item-spacing(5);
+  }
+
   &__has-suggestions {
     color: $compliance-suggestion-color;
     margin-left: item-spacing(2);
