--- a/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
@@ -26,6 +26,7 @@
       platform=platform
       wikiLinks=@wikiLinks
       complianceInfo=complianceInfo
+      exportPolicy=exportPolicy
       complianceSuggestion=complianceSuggestion
       suggestionConfidenceThreshold=suggestionConfidenceThreshold
       isNewComplianceInfo=isNewComplianceInfo
@@ -35,6 +36,7 @@
       notifyOnChangeSetSuggestions=(action "onSuggestionsChanged")
       notifyOnChangeSetRequiresReview=(action "onCompliancePolicyChangeSetDrift")
       onSave=(action "savePrivacyCompliancePolicy")
+      onSaveExportPolicy=(action "saveExportPolicy")
       onReset=(action "resetPrivacyCompliancePolicy")
       onComplianceJsonUpdate=(action "onComplianceJsonUpdate")
     }}
