change wiki link to reflect export policy link

--- a/wherehows-web/app/templates/components/datasets/compliance/export-policy.hbs
+++ b/wherehows-web/app/templates/components/datasets/compliance/export-policy.hbs
@@ -7,7 +7,7 @@
 
 
       {{more-info
-        link=@wikiLinks.gdprTaxonomy
+        link=@wikiLinks.exportPolicy
         tooltip="Click for more information on Data Export Metadata Annotations"
       }}
     </p>
