Change UX for metadata health score tab

--- a/wherehows-web/app/styles/components/dataset-health/_score-table.scss
+++ b/wherehows-web/app/styles/components/dataset-health/_score-table.scss
@@ -23,6 +23,14 @@
         }
       }
 
+      &--successful {
+        .dataset-health__score-table {
+          &__score {
+            color: get-color(green5);
+          }
+        }
+      }
+
       & .dataset-health__score-table {
         &__category {
           color: get-color(blue5);
