--- a/wherehows-web/app/templates/components/datasets/schemaless-tagging.hbs
+++ b/wherehows-web/app/templates/components/datasets/schemaless-tagging.hbs
@@ -2,9 +2,23 @@
   <header class="metadata-prompt__header">
     <p>
       Dataset <span title="Personally Identifiable Information" class="define-text">PII</span> & Security Classification
+
     </p>
+
+    {{#unless isEditing}}
+      <div class="compliance-entities-meta__secondary">
+        <button class="nacho-button nacho-button--tertiary" {{action toggleEditing true ComplianceEdit.DatasetLevelPolicy}}>
+          <i class="fa fa-pencil" aria-label="Edit Schemaless Classification"></i>
+          Edit
+        </button>
+      </div>
+    {{/unless}}
   </header>
 </section>
+
+{{#if isEditing}}
+  {{partial "datasets/dataset-compliance/action-bar"}}
+{{/if}}
 
 <div class="schemaless-tagging__tag">
   <h4 class="schemaless-tagging__prompt">
@@ -16,7 +30,7 @@
       id=(concat elementId '-schemaless-checkbox')
       type="checkbox"
       class="toggle-switch toggle-switch--light"
-      disabled=(not isEditable)
+      disabled=(not isEditing)
       checked=(readonly containsPersonalData)
       change=(action "onPersonalDataToggle" value="target.checked")
     }}
@@ -39,7 +53,7 @@
     {{ember-selector
       values=classifiers
       selected=classification
-      disabled=(not isEditable)
+      disabled=(not isEditing)
       selectionDidChange=(action "onSecurityClassificationChange")
     }}
   </div>
