--- a/wherehows-web/app/templates/components/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/dataset-compliance.hbs
@@ -44,7 +44,7 @@
                     title="{{unless isDatasetFullyClassified
                                     'Ensure you have provided a yes/no value for all dataset tags'
                                     'Save'}}"
-                    onclick={{action metrics.trackOnAction (action "saveCompliance")}} disabled={{and (eq edit ComplianceEdit.CompliancePolicy) changeSetNeedsReview}}>
+                    onclick={{action metrics.trackOnAction (action "saveCompliance")}} disabled={{and (eq editTarget ComplianceEdit.CompliancePolicy) changeSetNeedsReview}}>
                     Save
                   </button>
                 {{/track-ui-event}}
