Separate compliance and retention post requests on save

--- a/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
+++ b/wherehows-web/app/templates/components/datasets/containers/dataset-compliance.hbs
@@ -35,6 +35,7 @@
       notifyOnComplianceSuggestionFeedback=(action "onSuggestionsComplianceFeedback")
       notifyOnChangeSetRequiresReview=(action "onCompliancePolicyChangeSetDrift")
       onSave=(action "savePrivacyCompliancePolicy")
+      onSaveRetentionPolicy=(action "saveRetentionPolicy")
       onSaveExportPolicy=(action "saveExportPolicy")
       onReset=(action "resetPrivacyCompliancePolicy")
       onComplianceJsonUpdate=(action "onComplianceJsonUpdate")
