--- a/wherehows-web/app/templates/datasets/dataset.hbs
+++ b/wherehows-web/app/templates/datasets/dataset.hbs
@@ -164,6 +164,7 @@
         urn=encodedUrn
         aclMoreInfoLink=wikiLinks.jitAcl
         isJitAclAccessEnabled=isJitAclAccessEnabled
+        jitAclContact=jitAclContact
       }}
     {{/tabs.tabpanel}}
 
